[project]
name = "chilean-humor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alonso Astroza Tagle", email = "alonsoastroza@gmail.com" }
]
dependencies = [
    "datasette>=0.64.6",
    "pandas>=2.2.2",
    "jupyter>=1.0.0",
    "seaborn>=0.13.2",
    "sqlite-utils>=3.36",
    "youtube-transcript-api>=0.6.2",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chilean_humor"]
